--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Hero from "@components/Hero.astro";
 import Layout from "../layouts/Layout.astro";
 import Brands from "@components/Brands.astro";
 import Products from "@components/Products.astro";
-import CardReviews from "@components/Reviews/Reviews.astro";
+import Reviews from "@components/Reviews/Reviews.astro";
 
 export const prerender = true
 ---
@@ -12,5 +12,5 @@ export const prerender = true
   <Hero />
   <Brands />
   <Products />
-  <CardReviews />
+  <Reviews />
 </Layout>
