--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import { ClientRouter } from "astro:transitions";
 
-const { className, title = "Shop.Co" } = Astro.props as MainLayoutProps;
+const { className, id, title = "Shop.Co" } = Astro.props as MainLayoutProps;
 ---
 
 <!doctype html>
@@ -23,7 +23,7 @@ const { className, title = "Shop.Co" } = Astro.props as MainLayoutProps;
   </head>
   <body>
     <Header />
-    <main class={className}>
+    <main class={className} {...({id})} >
       <slot />
     </main>
     <Footer />
