--- a/src/styles/daisyui.css
+++ b/src/styles/daisyui.css
@@ -130,3 +130,14 @@
   > :where(input[type="radio"]:checked ~ .collapse-content) {
   padding-bottom: 0;
 }
+
+select {
+  appearance: none; /* Elimina el estilo por defecto del navegador */
+  -webkit-appearance: none; /* Compatibilidad con WebKit */
+  -moz-appearance: none; /* Compatibilidad con Firefox */
+
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' width='16'%3E%3Cpath d='m13.53 6.53-5 5a.751.751 0 0 1-1.062 0l-5-5a.751.751 0 1 1 1.063-1.062L8 9.938l4.47-4.47a.751.751 0 0 1 1.062 1.062h-.001Z' fill='%23currentColor'/%3E%3C/svg%3E");
+  background-position: right 15px center; /* Control de la posición de la flecha */
+  background-repeat: no-repeat;
+  background-size: 12px; /* Tamaño de la flecha */
+}
